; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/platforms/powernv/extr_opal-lpc.c_opal_lpc_inb.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/platforms/powernv/extr_opal-lpc.c_opal_lpc_inb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@opal_lpc_chip_id = common dso_local global i64 0, align 8
@OPAL_LPC_IO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @opal_lpc_inb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @opal_lpc_inb(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  %6 = load i64, i64* @opal_lpc_chip_id, align 8
  %7 = icmp slt i64 %6, 0
  br i1 %7, label %11, label %8

8:                                                ; preds = %1
  %9 = load i64, i64* %3, align 8
  %10 = icmp ugt i64 %9, 65535
  br i1 %10, label %11, label %12

11:                                               ; preds = %8, %1
  store i32 255, i32* %2, align 4
  br label %25

12:                                               ; preds = %8
  %13 = load i64, i64* @opal_lpc_chip_id, align 8
  %14 = load i32, i32* @OPAL_LPC_IO, align 4
  %15 = load i64, i64* %3, align 8
  %16 = call i64 @opal_lpc_read(i64 %13, i32 %14, i64 %15, i32* %5, i32 1)
  store i64 %16, i64* %4, align 8
  %17 = load i64, i64* %4, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %12
  br label %23

20:                                               ; preds = %12
  %21 = load i32, i32* %5, align 4
  %22 = call i32 @be32_to_cpu(i32 %21)
  br label %23

23:                                               ; preds = %20, %19
  %24 = phi i32 [ 255, %19 ], [ %22, %20 ]
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %23, %11
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i64 @opal_lpc_read(i64, i32, i64, i32*, i32) #1

declare dso_local i32 @be32_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
